@@ -19,6 +19,9 @@ PHP                                                                        NEWS
   . Fixed bug #75301 (Exif extension has built in revision version). (Peter
     Kokot)
 
+- GD:
+  . Fixed bug #65148 (imagerotate may alter image dimensions). (cmb)
+
 - intl:
   . Fixed bug #75317 (UConverter::setDestinationEncoding changes source instead 
     of destination). (andrewnester)
